tests/rosetta/transpiler/C/bitmap-b-zier-curves-cubic.error
compile failed: exit status 1: /tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c: In function ‘_mem’:
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:75:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   75 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c: At top level:
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:95:11: error: invalid initializer
   95 | Anon1 b = 0;
      |           ^
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c: In function ‘newBitmap’:
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:124:51: warning: passing argument 1 of ‘list_append_int_new’ from incompatible pointer type [-Wincompatible-pointer-types]
  124 |                         row = list_append_int_new(row, row_len, (Pixel){.r = 0LL, .g = 0LL, .b = 0LL});
      |                                                   ^~~
      |                                                   |
      |                                                   Pixel *
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:25:44: note: expected ‘const int *’ but argument is of type ‘Pixel *’
   25 | static int* list_append_int_new(const int *arr, size_t len, int val) {
      |                                 ~~~~~~~~~~~^~~
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:124:72: error: incompatible type for argument 3 of ‘list_append_int_new’
  124 |                         row = list_append_int_new(row, row_len, (Pixel){.r = 0LL, .g = 0LL, .b = 0LL});
      |                                                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                                        |
      |                                                                        Pixel
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:25:65: note: expected ‘int’ but argument is of type ‘Pixel’
   25 | static int* list_append_int_new(const int *arr, size_t len, int val) {
      |                                                             ~~~~^~~
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:127:32: warning: passing argument 1 of ‘list_append_strptr’ from incompatible pointer type [-Wincompatible-pointer-types]
  127 |         d = list_append_strptr(d, &d_len, row);
      |                                ^
      |                                |
      |                                Pixel **
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:39:55: note: expected ‘const char ***’ but argument is of type ‘Pixel **’
   39 | static const char*** list_append_strptr(const char ***arr, size_t *len, const char **val) {
      |                                         ~~~~~~~~~~~~~~^~~
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:127:43: warning: passing argument 3 of ‘list_append_strptr’ from incompatible pointer type [-Wincompatible-pointer-types]
  127 |         d = list_append_strptr(d, &d_len, row);
      |                                           ^~~
      |                                           |
      |                                           Pixel *
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:39:86: note: expected ‘const char **’ but argument is of type ‘Pixel *’
   39 | static const char*** list_append_strptr(const char ***arr, size_t *len, const char **val) {
      |                                                                         ~~~~~~~~~~~~~^~~
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:127:11: warning: assignment to ‘Pixel **’ from incompatible pointer type ‘const char ***’ [-Wincompatible-pointer-types]
  127 |         d = list_append_strptr(d, &d_len, row);
      |           ^
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:131:56: warning: initialization of ‘int’ from ‘Pixel **’ makes integer from pointer without a cast [-Wint-conversion]
  131 |     return (Anon1){.cols = cols, .rows = rows, .data = d};
      |                                                        ^
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:131:56: note: (near initialization for ‘(anonymous).data’)
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c: In function ‘setPx’:
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:135:17: error: ‘MapSS’ has no member named ‘cols’
  135 |     int cols = b.cols;
      |                 ^
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:136:17: error: ‘MapSS’ has no member named ‘rows’
  136 |     int rows = b.rows;
      |                 ^
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:138:11: warning: cast from pointer to integer of different size [-Wpointer-to-int-cast]
  138 |         b[(int)("data")][(int)(y)][(int)(x)] = p;
      |           ^
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:138:10: error: subscripted value is neither array nor pointer nor vector
  138 |         b[(int)("data")][(int)(y)][(int)(x)] = p;
      |          ^
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c: In function ‘fill’:
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:143:17: error: ‘MapSS’ has no member named ‘cols’
  143 |     int cols = b.cols;
      |                 ^
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:144:17: error: ‘MapSS’ has no member named ‘rows’
  144 |     int rows = b.rows;
      |                 ^
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:149:15: warning: cast from pointer to integer of different size [-Wpointer-to-int-cast]
  149 |             b[(int)("data")][(int)(y)][(int)(x)] = p;
      |               ^
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:149:14: error: subscripted value is neither array nor pointer nor vector
  149 |             b[(int)("data")][(int)(y)][(int)(x)] = p;
      |              ^
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c: In function ‘main’:
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:246:9: error: conversion to non-scalar type requested
  246 |         fillRgb((MapSS)b, 16773055LL);
      |         ^~~~~~~
/tmp/ctranspile652266327/bitmap-b-zier-curves-cubic.mochi.c:247:9: error: conversion to non-scalar type requested
  247 |         bezier3((MapSS)b, 20LL, 200LL, 700LL, 50LL, -300LL, 50LL, 380LL, 150LL, pixelFromRgb(4165615LL));
      |         ^~~~~~~

